--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "inquirer": "^8.2.4",
-    "mysql2": "^3.6.3"
+    "mysql2": "^3.6.3",
+    "sequelize": "^6.34.0"
   }
 }
